B&L QA/objects/Customer_Evaluation_Feedback__c.object
<CustomObject>
    <description>Used by EMEASU to capture feedback from the customers evaluation of the machine. Previously on Machine Evaluations object.</description>
    <fields>
        <fullName>Chamber_Stability__c</fullName>
        <description>Used by EMEASU</description>
        <label>Chamber Stability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_with_current_machine__c</fullName>
        <description>Used by EMEASU</description>
        <label>Comparison with current machine?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Better</fullName>
                </value>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>Not as good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESA_Entry_Site_Alignment_System__c</fullName>
        <description>Used by EMEASU</description>
        <label>ESA (Entry Site Alignment System)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ease_of_Use__c</fullName>
        <description>Used by EMEASU</description>
        <label>Ease of Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Efficiency_of_Cutter__c</fullName>
        <description>Used by EMEASU</description>
        <label>Efficiency of Cutter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ergonomics_of_Cutter__c</fullName>
        <description>Used by EMEASU</description>
        <label>Ergonomics of Cutter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ergonomics_of_Handpiece__c</fullName>
        <description>USed by EMEASU</description>
        <label>Ergonomics of Handpiece</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <description>USed by EMEASU</description>
        <label>Evaluation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gauge_Size__c</fullName>
        <description>Used by EMEASU</description>
        <label>Gauge Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20G</fullName>
                </value>
                <value>
                    <fullName>23G</fullName>
                </value>
                <value>
                    <fullName>25G</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>Used by EMEASU</description>
        <label>General Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Light_Filter_Amber__c</fullName>
        <description>Used by EMEASU</description>
        <label>Light Filter (Amber)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Light_Filter_Green__c</fullName>
        <description>USed by EMEASU</description>
        <label>Light Filter (Green)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Light_Filter_Yellow__c</fullName>
        <description>USed by EMEASU</description>
        <label>Light Filter (Yellow)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Light_Source__c</fullName>
        <description>USed by EMEASU</description>
        <label>Light Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Incision_Size_mm__c</fullName>
        <description>Used by EMEASU</description>
        <label>Minimum Incision Size (mm)</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEASU</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Evaluation Feedback</relationshipLabel>
        <relationshipName>Customer_Evaluation_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Rating__c</fullName>
        <description>Used by EMEASU</description>
        <label>Overall Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pack_Layout__c</fullName>
        <description>Used by EMEASU</description>
        <label>Pack Layout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_Modulation_Pulsed_Burst_etc__c</fullName>
        <description>Used by EMEASU</description>
        <label>Power Modulation (Pulsed/Burst etc)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Followability__c</fullName>
        <description>USed by EMEASU</description>
        <label>Segment &apos;Followability&apos;</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment_Holdability__c</fullName>
        <description>Used by EMEASU</description>
        <label>Segment &apos;Holdability&apos;</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speed_of_Set_Up__c</fullName>
        <description>Used by EMEASU</description>
        <label>Speed of Set Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surgeon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by EMEASU</description>
        <label>Surgeon</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Evaluation Feedback</relationshipLabel>
        <relationshipName>Customer_Evaluation_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Versatility_of_Foot_Pedal__c</fullName>
        <description>Used by EMEASU</description>
        <label>Versatility of Foot Pedal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitrectomy_Sub_Mode_Co_Linear__c</fullName>
        <description>Used by EMEASU</description>
        <label>Vitrectomy Sub-Mode: Co-Linear</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitrectomy_Sub_Mode_Dual_Linear__c</fullName>
        <description>Used by EMEASU</description>
        <label>Vitrectomy Sub-Mode: Dual Linear</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vitrectomy_Sub_Mode_Linear__c</fullName>
        <description>Used by EMEASU</description>
        <label>Vitrectomy Sub-Mode: Linear</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_use_this_Product_in_the_future__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by EMEASU</description>
        <label>Would use this Product in the future?</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Evaluation Feedback</label>
    <nameField>
        <displayFormat>CEF-{0000}</displayFormat>
        <label>Customer Evaluation Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Evaluation Feedback</pluralLabel>
    <recordTypes>
        <fullName>Stellaris</fullName>
        <active>true</active>
        <description>Customer Evaluation Feedback RT Stellaris</description>
        <label>Stellaris</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stellaris_PC</fullName>
        <active>true</active>
        <description>Customer Evaluation Feedback RT Stellaris PC</description>
        <label>Stellaris PC</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>